Corrected smallscreen/tablet spacing and background CSS.

--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ span#times {
 footer {
 	padding: 50px;
 }
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 1000px) {
 	body {
 		background: none;
 		padding: 0;
@@ -215,6 +215,8 @@ footer {
 	.wrapper {
 		margin: 0;
 	}
+}
+@media screen and (max-width: 580px) {
 	.flowplayer { 
 	   	width: 100%; 
 	   	background-color: #222;
